# bpmn-mcp

./: .gitignore  README.md  pyproject.toml
activity-log/: activity_log.json
src/bpmn_mcp/: __init__.py  main.py  server.py
tests/: test_bpmn.py  test_sequence.py
